# TestingCmake

./: CMakeLists.txt  LICENSE  main.cpp  testing.txt
dir1/: CMakeLists.txt  file1.cpp
dir1/include/dir1/: file1.hpp
dir2/: CMakeLists.txt  file2.cpp
dir2/include/dir2/: file2.hpp
